Add contractors CRUD
